crates/shiplog-bundle/tests/snapshots/snapshot__checksum_format.snap
---
source: crates/shiplog-bundle/tests/snapshot.rs
assertion_line: 88
expression: "checksums.join(\"\\n\")"
---
b94d27b9934d3e08a52e52d7da7dabfac484efe37a5380ee9088f7ace2efcde9  packet.md (11 bytes)
